--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
     <div class="container">
       <div class="container-2">
         <header class="header">
-          <div class="pembungkus-nama">
-            <div class="nama">FARIDSYAH AL MULUK</div>
+          <div class="pembungkus-welcome">
+            <div class="welcome">WELCOME</div>
           </div>
         </header>
-        <div class="profile"></div>
+        <div class="foto"></div>
+        <div class="nama">
+          <h1>FARIDSYAH AL MULUK</h1>
+        </div>
+        <div class="roles">
+          <p>Graphic Designer | Content Reasearcher</p>
+        </div>
         <nav class="nav">
           <div class="links">
             <a href="#">
