--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container-2">
         <header class="header">
           <div class="pembungkus-welcome">
-            <div class="welcome">WELCOME</div>
+            <div class="welcome">PORTAL</div>
           </div>
         </header>
         <div class="foto"></div>
